2000-05-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (ExecuteFunction):
	core dump fix

2000-05-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	applied man page updates by brooke@jump.net (placement styles)

	* fvwm/functions.c (ExecuteFunction):
	fixed expansion of command names in '+' entries in a function or menu

	* configure.in (FVWM_CONFDIR):
	removed busycursor configure option

	* fvwm/functions.h (enum):
	* fvwm/screen.h (ScreenInfo):
	* fvwm/externs.h:
	* fvwm/cursor.h:
	* fvwm/read.c:
	(ReadFile):
	(PipeRead):
	* fvwm/module_interface.c (executeModuleSync):
	* fvwm/menus.c (MenuInteraction):
	(pop_menu_up):
	* fvwm/misc.c (GrabEm):
	(GrabEm):
	(UngrabEm):
	* fvwm/fvwm.c (MAX_CFG_CMDS):
	(InitVariables):
	* fvwm/functions.c (func_config):
	* fvwm/cursor.c (setBusyCursor):
	* fvwm/builtins.c (wait_func):
	(do_recapture):
	removed BUSYCURSOR ifdef

	* fvwm/builtins.c (wait_func):
	removed "#if 0"ed code

2000-05-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/builtins.c (echo_func):
	removed debug fprintf
	(wait_func):
	support old syntax too; strip leading and trailing whitespace

	* fvwm/fvwm2.1 (Example):
	clarified Close command

	* fvwm/focus.c (DoSetFocus):
	fixed setting focus to an icon after moving it to another page

	* fvwm/menus.c (MenuInteraction):
	(pop_menu_up):
	fixed core dump if 'Popup ""' was used in DynamicPopupAction

2000-05-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* ChangeLog:
	* ChangeLog-pre-2.2:
	moved old ChangeLog entries into new file

	* fvwm/focus.h (FOCUS_SET):
	fixed focus problem if clock was set backwards in time but less than
	30 seconds

	* fvwm/events.c (StashEventTime):
	* libs/defaults.h (CLOCK_SKEW_MS):
	new macro replaces hard coded 30s in StashEventTime

	* fvwm/borders.c:
	* fvwm/misc.c (ButtonPosition):
	moved function to borders.c

	* fvwm/externs.h:
	* fvwm/misc.h:
	moved extern decalrations to externs.h

	* fvwm/events.c:
	* fvwm/misc.c (flush_expose):
	(StashEventTime):