@@ -300,6 +300,11 @@ Bool IsRectangleOnThisPage(rectangle *rec, int desk)
     True : False;
 }
 
+Bool IntersectsInterval(int x1, int width1, int x2, int width2)
+{
+  return !(x1 + width1 <= x2 || x2 + width2 <= x1);
+}
+
 /****************************************************************************
  *
  * For menus, move, and resize operations, we can effect keyboard
