@@ -1,5 +1,11 @@
 2000-05-10  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/misc.c (IntersectsInterval):
+	new function
+
+	* fvwm/move_resize.c (move_window_doit):
+	some fixes to MoveToPage command
+
 	* fvwm/functions.c (ExecuteFunction):
 	core dump fix
 
